# OrderBookSimulator

./: .gitignore  CMakeLists.txt  README.md
data/: generate_data.cpp
frontend/orderbooksimulator/: README.md  package-lock.json  package.json
frontend/orderbooksimulator/app/: layout.tsx  page.tsx  theme.ts
frontend/orderbooksimulator/app/api/metrics/: route.ts
frontend/orderbooksimulator/app/components/: Dashboard.tsx  HomeScreen.tsx  LatencyChart.tsx  MemoryUsageChart.tsx  MetricsOverview.tsx  OperationBreakdown.tsx  PerformanceComparison.tsx  ThemeProviderWrapper.tsx  ThroughputChart.tsx
frontend/orderbooksimulator/app/services/: api.ts
frontend/orderbooksimulator/app/types/: metrics.ts
frontend/orderbooksimulator/app/utils/: formatters.ts
include/common/: macros.h  types.h
include/orderbook/: OrderBookRB.h  RBTree.h  SkipList.h
include/utils/: benchmark.h
src/: main.cpp
src/orderbook/: OrderBookRB.cpp  RBTree.cpp  SkipList.cpp
